--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    <!-- SCRIPT STUFF STARTS HERE --> 
     <script>
       let count = 0;
-      let x = 10000000000000;
+      let x = 1;
       let aocmpc = 1;
       let confirmreset = null;
       let cps = 0;
